# skillon365.github.io

./: Cargo.toml  LICENSE.txt  README.md  pyproject.toml
python/skillon365/: __init__.py
scripts/: pre-commit  setup
src/: lib.rs
tests/: test_skillon365.py
